# libfprint-fprintd

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README  README.transifex  TODO  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  fprintd.1  fprintd.pod  fprintd.service.in  net.reactivated.fprint.device.policy.in
doc/: Makefile.am
doc/dbus/: Makefile.am
pam/: Makefile.am  fingerprint-strings.h  pam_fprintd.c
po/: LINGUAS  ar.po  as.po  ast.po  az.po  be.po  bg.po  bg_BG.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  fo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  (+34 more)
src/: Makefile.am  device.c  file_storage.c  loop.c  main.c  manager.c
tests/: Makefile.am  delete.c  enroll.c  list.c  verify.c
